NOTICKET add tags to bbp_workflow_svc apigateway, update docs
